--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       
       <p> <span class="typed" data-typed-items="Mobile Developer"></span></p>
-      <li><i class="bi bi-chevron-"></i> <span>0746 917 9035</span></li>
+      <li><i class="bi bi-chevron-"></i> <span>07471087150</span></li>
       <li><i class="bi bi-chevron-"> <span>Mtgokdogan@gmail.com</span></li>
       <li><i class="bi bi-chevron-"><span>London, UK</span></li>
       <div class="social-links">
